Update AllLapsView.java